title = "BE@R-e Controller"

[Metadata] #our stuff
RobotName = "BE@R-e"
TeamName = "Cy-Bears"
TeamNum = "10402"

[database]
server = "192.168.1.1" #IPv4 or IPv6 if needed
ports = [ 8000, 8001, 8002 ] #connection ports
connection_max = 5000
enabled = true

[build-system]
requires = ["robotpy"]
build-backend = "setuptools.build_meta"
